# twin-protocol

./: --outbox  .gitignore  .processed_ids.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.python  LICENSE  README.md  astraea_embedded.py  astraea_phase3_production.py  astraea_v4_0_pipeline_test.py  astraea_v5_3_fixed.py  astraea_v5_3_hardened.py  brain.py  butler.py  cascade_capture.py  codex_outbox.jsonl  codex_outbox_watcher.ps1  codex_side_analysis.md  desktop_organizer.py  docker-compose.yml  gemini_review.txt  generate_200_tasks.py  osworld_win_benchmark.py  phase2_engine.py  phase3_engine.py  pyproject.toml  run_osworld_official.py  shared_cognition.jsonl  twins_mcp_bridge.py  twins_schema.json  vision_engine.py  visual_fusion.py
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
blog/: twins-protocol-hn-post.md
cognitive_kit/: README.md  __init__.py  setup.py
cognitive_kit/cognitive/: __init__.py  circuit_breaker.py  health_field.py  reflection.py
cognitive_kit/mcts/: __init__.py  engine.py
cognitive_kit/skills/: __init__.py  integrator.py
computer_control/: README.md  __init__.py  setup.py
computer_control/handler/: control_panel.py
demo/node-side/: HTTP_TRANSPORT.md  cli.js  cross-language-debug.js  cross-language-debug2.js  cross-language-sign-test.js  cross-language-test.js  package.json  twin-demo-recorder.js  twin-identity.js  (+2 more)
paper/: neurips_2026_cascade_vision.tex
schemas/: CONSISTENCY_REPORT.md  tool_request.json
scripts/: demo-recording.txt
tests/: test_extensions.py
twin-protocol/: .gitignore  INSTALL_NODE.md
(+77 files in other folders)
